--- a/07fourgroups.Rmd
+++ b/07fourgroups.Rmd
@@ -238,6 +238,8 @@ summary(lex_recall_aov)
 TukeyHSD(lex_recall_aov, "maingroup", conf.level = 0.95)
 ```
 
+### Recovery
+
 What about the recovery metric for reversed stories? 
 ```{r}
 lex_recovery <- cleanlexdata %>%
@@ -259,6 +261,21 @@ Is there a real effect of group? Simple LM first. No effect of group. No need to
 ```{r}
 lex_recov_lm <- lm(recov ~ maingroup, data = lex_recovery)
 summary(lex_recov_lm)
+```
+
+### Reversed Only Analysis
+Now let's do all this again with only reversed stories data. LMM, then ANOVA. 
+```{r}
+lex_recall_lmm_r <- lmer(acc ~ maingroup * (1|id) + (1|story), data = filter(cleanlexdata,direction=="reversed"))
+summary(lex_recall_lmm_r)
+
+lexdata_subjects <- cleanlexdata %>%
+  group_by(maingroup,participant,direction) %>%
+  dplyr::summarize(acc = mean(acc,na.rm=TRUE))
+
+lex_recall_aov_r <- aov(acc ~ maingroup, data = filter(lexdata_subjects, direction == "reversed"))
+summary(lex_recall_aov_r)
+TukeyHSD(lex_recall_aov_r, "maingroup", conf.level = 0.95)
 ```
 
 # Eye Gaze
@@ -326,9 +343,7 @@ ggplot(eyegaze_heat_all, aes(x = maingroup, y = aoi)) +
 Let's run LMMs and ANOVAs, AOI by AOI. 
 
 ## Eyes AOI
-Eyes AOI. LMM tells us there was no effect of direction or maingroup. The ANOVA tells us there was a main effect of group (p = 0.001) and that this effect was driven by significant differences between HearingLate and DeafEarly (p = 0.001), HearingLate and DeafLate (p = 0.014), and HearingLate and HearingNovice (p = 0.026). 
-
-In other words, the ANOVA tells us HearingLate look more at the eyes overall than other groups (see collapsed heat map).
+Eyes AOI. LMM and ANOVA tell us there was no effect of direction or maingroup. 
 ```{r}
 eyedata <- eyegaze %>%
   spread(aoi,percent)
@@ -343,15 +358,23 @@ eyedata_subject <- eyedata %>%
 eyes_lmm <- lmer(eyes ~ maingroup * direction + (1|id) + (1|story), data = eyedata)
 summary(eyes_lmm)
 
-eyes_aov <- aov(eyes ~ maingroup * direction, data = eyedata)
+eyes_aov <- aov(eyes ~ maingroup * direction, data = eyedata_subject)
 summary(eyes_aov)
-TukeyHSD(eyes_aov,"maingroup",conf.level = 0.95)
+#TukeyHSD(eyes_aov,"maingroup",conf.level = 0.95)
+```
+
+How about reversed stories only? It shows that for reversed stories, HearingLate looked significantly more at the eyes than any other group. 
+```{r}
+eyes_lmm_r <- lmer(eyes ~ maingroup + (1|id) + (1|story), data = filter(eyedata,direction=="reversed"))
+summary(eyes_lmm_r)
+
+eyes_aov_r <- aov(eyes ~ maingroup, data = filter(eyedata_subject, direction == "reversed"))
+summary(eyes_aov_r)
+#TukeyHSD(eyes_aov,"maingroup",conf.level = 0.95)
 ```
 
 ## Mouth AOI
-Mouth AOI. LMM tells us there was no effect of maingroup and a weak effect of reversal (p = 0.056). The ANOVA tells us there is a main effect of group (p < 0.001) and of direction (0.022), no interactions. 
-
-The posthoc tells us HearingLate was different from DeafEarly (p = 0.02) and from DeafLate (0.000), and that HearingNovice was different from DeafLate (p = 0.01). 
+Mouth AOI. LMM tells us there was no effect of maingroup and a weak effect of reversal (p = 0.056). The ANOVA tells us there were weak effects of group (p = 0.056) and of direction (0.058), no interactions. 
 
 Look at the collapsed heat map. HearingLate looked *less* at the mouth than any of the deaf. HearingNovice looked *less* than DeafLate. Really, DeafLate looks at the mouth **a lot** compared to any other group. 
 
@@ -359,46 +382,86 @@ Look at the collapsed heat map. HearingLate looked *less* at the mouth than any 
 mouth_lmm <- lmer(mouth ~ maingroup * direction + (1|id) + (1|story), data = eyedata)
 summary(mouth_lmm)
 
-mouth_aov <- aov(mouth ~ maingroup * direction, data = eyedata)
+mouth_aov <- aov(mouth ~ maingroup * direction, data = eyedata_subject)
 summary(mouth_aov)
 TukeyHSD(mouth_aov,"maingroup",conf.level = 0.95)
 ```
 
-## Chin AOI
-Chin AOI. LMM tells us there was no effect of maingroup and a weak effect of reversal (p = 0.050). The ANOVA tells us there is a main effect of group (p < 0.028) and a very weak one of direction (0.056), no interactions. 
+For reversed stories. The LMM tells us HearingLate was significantly different for mouth-looking (p = 0.033) and HearingNovice just barely (p = 0.058). The ANOVA is not significant. 
 
-The posthoc tells us DeafEarly and DeafLate were significantly different (p = 0.026) - the heat map (collapsed) tells us DeafLate looks less at the chin. 
+```{r}
+mouth_lmm_r <- lmer(mouth ~ maingroup + (1|id) + (1|story), data = filter(eyedata,direction == "reversed"))
+summary(mouth_lmm_r)
+
+mouth_aov_r <- aov(mouth ~ maingroup, data = filter(eyedata_subject,direction=="reversed"))
+summary(mouth_aov_r)
+TukeyHSD(mouth_aov_r,"maingroup",conf.level = 0.95)
+```
+
+## Chin AOI
+Chin AOI. LMM tells us there was no effect of maingroup and a weak effect of reversal (p = 0.050). The ANOVA was not significant. 
 
 ```{r}
 chin_lmm <- lmer(chin ~ maingroup * direction + (1|id) + (1|story), data = eyedata)
 summary(chin_lmm)
 
-chin_aov <- aov(chin ~ maingroup * direction, data = eyedata)
+chin_aov <- aov(chin ~ maingroup * direction, data = eyedata_subject)
 summary(chin_aov)
-TukeyHSD(chin_aov,"maingroup",conf.level = 0.95)
+#TukeyHSD(chin_aov,"maingroup",conf.level = 0.95)
 ```
 
+For reversed stories. LMM  and ANOVA tells us there was no effect of maingroup. 
+```{r}
+chin_lmm_r <- lmer(chin ~ maingroup + (1|id) + (1|story), data = filter(eyedata, direction == "reversed"))
+summary(chin_lmm_r)
+
+chin_aov_r <- aov(chin ~ maingroup, data = filter(eyedata_subject, direction == "reversed"))
+summary(chin_aov_r)
+#TukeyHSD(chin_aov_r,"maingroup",conf.level = 0.95)
+```
+
+
 ## FaceChest Ratio
-FCR. LMM tells us there was no effects of maingroup or reversals. There is a significant interaction for HearingNovice in the Reversed condition (p = 0.002) where they do worse, and non-significant interactinos of HearingLate and Reversed (p = 0.099) as well as HearingNovice overall (p = 0.055)
+FCR. LMM tells us there was no effects of maingroup or reversals. There is a significant interaction for HearingNovice in the Reversed condition (p = 0.002) where they do worse, and non-significant interactions of HearingLate and Reversed (p = 0.099) as well as HearingNovice overall (p = 0.055)
 
-The ANOVA tells us there is a main effect of group (p < 0.001) and of direction (0.0279) with no interactions. The posthoc 
+The ANOVA tells us there is a main effect of group (p < 0.001) but a nonsignificant direction (0.064) with no interactions. The posthoc tells us HearingNovice was different from the other three groups (p < 0.01) - their FCR was significantly lower. 
 
-The posthoc tells us HearingNovice was different from the other three groups (p < 0.001) - their FCR was significantly lower. 
-
-DeafLate-DeafEarly        -0.01183343 -0.08461189  0.06094503 0.9747434
-HearingLate-DeafEarly     -0.03550413 -0.10459700  0.03358874 0.5436463
-HearingNovice-DeafEarly   -0.14438626 -0.21394441 -0.07482811 0.0000013
-HearingLate-DeafLate      -0.02367070 -0.10240989  0.05506849 0.8637293
-HearingNovice-DeafLate    -0.13255283 -0.21170061 -0.05340505 0.0001358
-HearingNovice-HearingLate -0.10888213 -0.18465476 -0.03310950 0.0014665
+$maingroup
+                                 diff         lwr         upr     p adj
+DeafLate-DeafEarly        -0.01422087 -0.09856288  0.07012114 0.9711963
+HearingLate-DeafEarly     -0.03330513 -0.11424941  0.04763916 0.7049517
+HearingNovice-DeafEarly   -0.14595675 -0.22907930 -0.06283420 0.0000786
+HearingLate-DeafLate      -0.01908426 -0.11086645  0.07269793 0.9480092
+HearingNovice-DeafLate    -0.13173588 -0.22544475 -0.03802702 0.0021847
+HearingNovice-HearingLate -0.11265162 -0.20331448 -0.02198877 0.0085578
 
 ```{r}
 fcr_lmm <- lmer(facechest ~ maingroup * direction + (1|id) + (1|story), data = eyedata)
 summary(fcr_lmm)
 
-fcr_aov <- aov(facechest ~ maingroup * direction, data = eyedata)
+fcr_aov <- aov(fcr ~ maingroup * direction, data = eyedata_subject)
 summary(fcr_aov)
 TukeyHSD(fcr_aov,"maingroup",conf.level = 0.95)
+```
+
+Reversed stories. HearingNovice is significantly different in the LMM (p < 0.001). The ANOVA tells us there was a significant effect of maingroup. Posthocs tell us this effect was ddriven by differences between HearingNovice vs. DeafEarly & DeafLate. What's interesting is that HearingNovice was NOT significantly different than HearingLate. 
+
+$maingroup
+                                 diff        lwr           upr     p adj
+DeafLate-DeafEarly        -0.04407008 -0.1844582  0.0963180293 0.8370200
+HearingLate-DeafEarly     -0.06232243 -0.1949767  0.0703318668 0.5979387
+HearingNovice-DeafEarly   -0.20008404 -0.3363081 -0.0638599310 0.0016206
+HearingLate-DeafLate      -0.01825235 -0.1706605  0.1341558368 0.9886279
+HearingNovice-DeafLate    -0.15601396 -0.3115392 -0.0004887181 0.0490161
+HearingNovice-HearingLate -0.13776161 -0.2863430  0.0108198173 0.0781045
+
+```{r}
+fcr_lmm_r <- lmer(facechest ~ maingroup + (1|id) + (1|story), data = filter(eyedata, direction == "reversed"))
+summary(fcr_lmm_r)
+
+fcr_aov_r <- aov(fcr ~ maingroup, data = filter(eyedata_subject, direction == "reversed"))
+summary(fcr_aov_r)
+TukeyHSD(fcr_aov_r,"maingroup",conf.level = 0.95)
 ```
 
 # Summary
