08gist - new one!

--- a/06newresults.Rmd
+++ b/06newresults.Rmd
@@ -16,7 +16,7 @@ output:
     df_print: paged
 ---
 
-# Introduction 
+# Introduction!
 So this is a new attempt at sorting out the data analyses for this project. We'll go in this order: 
 
 1. *Deaf Signers.* Let's set up the gold standard. 
@@ -375,7 +375,7 @@ ggplot(eye_deaf_heat, aes(x = direction, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_gradient(low = "lightblue",high = "steelblue") +
 #  scale_fill_distiller(type="div", palette = "RdYlBu") +
-  scale_fill_viridis(option = "viridis", direction=-1) +
+  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) + facet_wrap("maingroup") +
   ylab("") + xlab("") + ggtitle("Deaf Signers' Eye Gaze Heat Map")
 
@@ -414,7 +414,7 @@ eye_deaf_heat %>%
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_gradient(low = "lightblue",high = "steelblue") +
 #  scale_fill_distiller(type="div", palette = "RdYlBu") +
-  scale_fill_viridis(option = "viridis", direction=-1) +
+  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   ylab("") + xlab("") + ggtitle("Deaf Signers' REVERSED STORIES Eye Gaze")
 
@@ -596,7 +596,7 @@ ggplot(eye_late_heat, aes(x = direction, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_gradient(low = "lightblue",high = "steelblue") +
 #  scale_fill_distiller(type="div", palette = "RdYlBu") +
-  scale_fill_viridis(option = "viridis", direction=-1) +
+  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) + facet_wrap("hearing") +
   ylab("") + xlab("") + ggtitle("Late Signers' Eye Gaze Heat Map")
 ```
@@ -624,7 +624,7 @@ ggplot(filter(eye_late_heat,direction=="reversed"), aes(x = hearing, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_gradient(low = "lightblue",high = "steelblue") +
 #  scale_fill_distiller(type="div", palette = "RdYlBu") +
-  scale_fill_viridis(option = "viridis", direction=-1) +
+  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) + 
   ylab("") + xlab("") + ggtitle("Late Signers' REVERSED ONLY Eye Gaze")
 ```
@@ -773,7 +773,7 @@ ggplot(eye_hearing_heat, aes(x = direction, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_gradient(low = "lightblue",high = "steelblue") +
 #  scale_fill_distiller(type="div", palette = "RdYlBu") +
-  scale_fill_viridis(option = "viridis", direction=-1) +
+  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) + facet_wrap("aoagroup") +
   ylab("") + xlab("") + ggtitle("Hearing Signers' Eye Gaze Heat Map")
 ```
@@ -805,7 +805,7 @@ ggplot(filter(eye_hearing_heat, direction == "reversed"), aes(x = aoagroup, y = 
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_gradient(low = "lightblue",high = "steelblue") +
 #  scale_fill_distiller(type="div", palette = "RdYlBu") +
-  scale_fill_viridis(option = "viridis", direction=-1) +
+  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   ylab("") + xlab("") + ggtitle("Hearing Signers' REVERSED ONLY Eye Gaze")
 ```
