--- a/08gist.Rmd
+++ b/08gist.Rmd
@@ -276,7 +276,7 @@ summary(gist_glmm)
 ```
 
 # AoA effects for Reversed Stories on Gist!
-The coefficients are log odds. HearingNovice and Direction are significant main effects. I converted them to probability by hand (odds = exp(coef), then probability = odds / 1+odds). From (Sebastian's blog)[https://sebastiansauer.github.io/convert_logit2prob/]. (And a good SO post here.)[https://stackoverflow.com/questions/41384075/r-calculate-and-interpret-odds-ratio-in-logistic-regression] The intercept is around 1, so the probability of getting it right as a DeafNative is 100%. (If I'm interpreting this right). Adding up the coefficients:
+The coefficients are log odds. HearingNovice and Direction are significant main effects. I converted them to probability by hand (odds = exp(coef), then probability = odds / 1+odds). From [Sebastian's blog](https://sebastiansauer.github.io/convert_logit2prob/). [And a good SO post here.](https://stackoverflow.com/questions/41384075/r-calculate-and-interpret-odds-ratio-in-logistic-regression) The intercept is around 1, so the probability of getting it right as a DeafNative is 100%. (If I'm interpreting this right). Adding up the coefficients:
 
 What about reversed stories only? Doing it again here.
 
